--- a/indexStyles/indexStyle1.css
+++ b/indexStyles/indexStyle1.css
@@ -16,7 +16,7 @@
     border-radius: 15px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
 
     padding-top: 15px;
 }
@@ -24,7 +24,7 @@
 .search{
     background-color: rgba(255,255,255, .1);
 
-    width: 90%;
+    width: 30%;
     height: 50px;
 
     display: flex;
@@ -32,12 +32,14 @@
     align-items: center;
 
     border-radius: 5px;
+
+    margin-left: 20px;
 }
 
 .search input{
     background: transparent;
     height: 80%;
-    width: 275px;
+    width: 675px;
     padding-left: 25px;
 }
 
@@ -107,4 +109,45 @@
 .settings-panel li i{
     font-size: 20px;
     color: white;
+}
+
+@media (max-width: 2200px){
+}
+
+@media (max-width: 1480px){
+	.search-panel div{
+        width: 100%;
+        height: 100%;
+        
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    
+        padding-top: 15px;
+    }
+
+    .search{
+        align-self: center;
+        margin-left: 0px;
+        width: 90%;
+    }
+
+    .search input{
+        background: transparent;
+        height: 80%;
+        width: 275px;
+        padding-left: 25px;
+    }
+}
+
+@media (max-width: 1100px){
+    
+}
+
+@media (max-width: 920px){
+	
+}
+
+@media (max-width: 840px){
+	
 }
